// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Purchase price threshold card renders correctly 1`] = `
<div>
  <div
    class="components-surface components-card fraud-protection-rule-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="purchase-price-threshold-card"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body fraud-protection-rule-card-header-container css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            Purchase Price Threshold
          </p>
          <p
            class="fraud-protection-rule-card-description"
          >
            This filter compares the purchase price of an order to the minimum and maximum purchase amounts that you specify.
          </p>
        </div>
      </div>
      <hr />
      <div
        class="components-card__body components-card-body wcpay-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="fraud-protection-rule-toggle"
        >
          <strong>
            Enable filtering
          </strong>
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper ej5x27r4"
          >
            <div
              class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
            >
              <span
                class="components-form-toggle"
              >
                <input
                  aria-describedby="inspector-toggle-control-0__help"
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-0"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-0"
              >
                Block transactions for abnormal purchase prices
              </label>
            </div>
            <p
              class="components-base-control__help css-v0euhr-StyledHelp-deprecatedMarginHelp ej5x27r1"
              id="inspector-toggle-control-0__help"
            >
              When enabled, the payment will be blocked.
            </p>
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            An unusually high purchase amount, compared to the average for your business, can indicate potential fraudulent activity.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`Purchase price threshold card renders correctly when enabled 1`] = `
<div>
  <div
    class="components-surface components-card fraud-protection-rule-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="purchase-price-threshold-card"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body fraud-protection-rule-card-header-container css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            Purchase Price Threshold
          </p>
          <p
            class="fraud-protection-rule-card-description"
          >
            This filter compares the purchase price of an order to the minimum and maximum purchase amounts that you specify.
          </p>
        </div>
      </div>
      <hr />
      <div
        class="components-card__body components-card-body wcpay-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="fraud-protection-rule-toggle"
        >
          <strong>
            Enable filtering
          </strong>
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper ej5x27r4"
          >
            <div
              class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
            >
              <span
                class="components-form-toggle is-checked"
              >
                <input
                  aria-describedby="inspector-toggle-control-1__help"
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-1"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-1"
              >
                Block transactions for abnormal purchase prices
              </label>
            </div>
            <p
              class="components-base-control__help css-v0euhr-StyledHelp-deprecatedMarginHelp ej5x27r1"
              id="inspector-toggle-control-1__help"
            >
              The payment will be blocked.
            </p>
          </div>
          <div>
            <div
              class="fraud-protection-rule-toggle-children-container"
            >
              <strong>
                Limits
              </strong>
              <div
                class="fraud-protection-rule-toggle-children-horizontal-form"
              >
                <div
                  class="fraud-protection-rule-toggle-children-vertical-form"
                >
                  <label
                    for="fraud-protection-purchase-price-minimum"
                  >
                    Minimum purchase price
                  </label>
                  <div
                    class="components-base-control components-amount-input__container"
                  >
                    <div
                      class="components-base-control__field components-amount-input__input_container"
                    >
                      <span
                        class="components-amount-input__prefix"
                      >
                        $
                      </span>
                      <input
                        class="components-text-control__input components-amount-input__input"
                        data-testid="amount-input"
                        id="fraud-protection-purchase-price-minimum"
                        placeholder="0.00"
                        value=""
                      />
                    </div>
                    <span
                      class="components-amount-input__help_text"
                    >
                      Leave blank for no limit
                    </span>
                  </div>
                </div>
                <div
                  class="fraud-protection-rule-toggle-children-vertical-form"
                >
                  <label
                    for="fraud-protection-purchase-price-maximum"
                  >
                    Maximum purchase price
                  </label>
                  <div
                    class="components-base-control components-amount-input__container"
                  >
                    <div
                      class="components-base-control__field components-amount-input__input_container"
                    >
                      <span
                        class="components-amount-input__prefix"
                      >
                        $
                      </span>
                      <input
                        class="components-text-control__input components-amount-input__input"
                        data-testid="amount-input"
                        id="fraud-protection-purchase-price-maximum"
                        placeholder="0.00"
                        value=""
                      />
                    </div>
                    <span
                      class="components-amount-input__help_text"
                    >
                      Leave blank for no limit
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <br />
                <div
                  class="wcpay-inline-notice wcpay-inline-warning-notice fraud-protection-rule-card-notice fraud-protection-rule-card-notice-warning components-notice is-warning"
                >
                  <div
                    class="components-notice__content"
                  >
                    <div
                      class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
                      data-wp-c16t="true"
                      data-wp-component="Flex"
                    >
                      <div
                        class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon css-mw3lhz-View-Item-sx-Base em57xhy0"
                        data-wp-c16t="true"
                        data-wp-component="FlexItem"
                      >
                        <svg
                          class="gridicon gridicons-notice-outline"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g>
                            <path
                              d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
                            />
                          </g>
                        </svg>
                      </div>
                      <div
                        class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
                        data-wp-c16t="true"
                        data-wp-component="FlexItem"
                      >
                        A price range must be set for this filter to take effect.
                      </div>
                    </div>
                    <div
                      class="components-notice__actions"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            An unusually high purchase amount, compared to the average for your business, can indicate potential fraudulent activity.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`Purchase price threshold card renders correctly when enabled and checked 1`] = `
<div>
  <div
    class="components-surface components-card fraud-protection-rule-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="purchase-price-threshold-card"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body fraud-protection-rule-card-header-container css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            Purchase Price Threshold
          </p>
          <p
            class="fraud-protection-rule-card-description"
          >
            This filter compares the purchase price of an order to the minimum and maximum purchase amounts that you specify.
          </p>
        </div>
      </div>
      <hr />
      <div
        class="components-card__body components-card-body wcpay-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="fraud-protection-rule-toggle"
        >
          <strong>
            Enable filtering
          </strong>
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper ej5x27r4"
          >
            <div
              class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
            >
              <span
                class="components-form-toggle is-checked"
              >
                <input
                  aria-describedby="inspector-toggle-control-2__help"
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-2"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-2"
              >
                Block transactions for abnormal purchase prices
              </label>
            </div>
            <p
              class="components-base-control__help css-v0euhr-StyledHelp-deprecatedMarginHelp ej5x27r1"
              id="inspector-toggle-control-2__help"
            >
              The payment will be blocked.
            </p>
          </div>
          <div>
            <div
              class="fraud-protection-rule-toggle-children-container"
            >
              <strong>
                Limits
              </strong>
              <div
                class="fraud-protection-rule-toggle-children-horizontal-form"
              >
                <div
                  class="fraud-protection-rule-toggle-children-vertical-form"
                >
                  <label
                    for="fraud-protection-purchase-price-minimum"
                  >
                    Minimum purchase price
                  </label>
                  <div
                    class="components-base-control components-amount-input__container"
                  >
                    <div
                      class="components-base-control__field components-amount-input__input_container"
                    >
                      <span
                        class="components-amount-input__prefix"
                      >
                        $
                      </span>
                      <input
                        class="components-text-control__input components-amount-input__input"
                        data-testid="amount-input"
                        id="fraud-protection-purchase-price-minimum"
                        placeholder="0.00"
                        value=""
                      />
                    </div>
                    <span
                      class="components-amount-input__help_text"
                    >
                      Leave blank for no limit
                    </span>
                  </div>
                </div>
                <div
                  class="fraud-protection-rule-toggle-children-vertical-form"
                >
                  <label
                    for="fraud-protection-purchase-price-maximum"
                  >
                    Maximum purchase price
                  </label>
                  <div
                    class="components-base-control components-amount-input__container"
                  >
                    <div
                      class="components-base-control__field components-amount-input__input_container"
                    >
                      <span
                        class="components-amount-input__prefix"
                      >
                        $
                      </span>
                      <input
                        class="components-text-control__input components-amount-input__input"
                        data-testid="amount-input"
                        id="fraud-protection-purchase-price-maximum"
                        placeholder="0.00"
                        value=""
                      />
                    </div>
                    <span
                      class="components-amount-input__help_text"
                    >
                      Leave blank for no limit
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <br />
                <div
                  class="wcpay-inline-notice wcpay-inline-warning-notice fraud-protection-rule-card-notice fraud-protection-rule-card-notice-warning components-notice is-warning"
                >
                  <div
                    class="components-notice__content"
                  >
                    <div
                      class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
                      data-wp-c16t="true"
                      data-wp-component="Flex"
                    >
                      <div
                        class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon css-mw3lhz-View-Item-sx-Base em57xhy0"
                        data-wp-c16t="true"
                        data-wp-component="FlexItem"
                      >
                        <svg
                          class="gridicon gridicons-notice-outline"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g>
                            <path
                              d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
                            />
                          </g>
                        </svg>
                      </div>
                      <div
                        class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
                        data-wp-c16t="true"
                        data-wp-component="FlexItem"
                      >
                        A price range must be set for this filter to take effect.
                      </div>
                    </div>
                    <div
                      class="components-notice__actions"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            An unusually high purchase amount, compared to the average for your business, can indicate potential fraudulent activity.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`Purchase price threshold card renders like disabled when checked, but not enabled 1`] = `
<div>
  <div
    class="components-surface components-card fraud-protection-rule-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="purchase-price-threshold-card"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body fraud-protection-rule-card-header-container css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            Purchase Price Threshold
          </p>
          <p
            class="fraud-protection-rule-card-description"
          >
            This filter compares the purchase price of an order to the minimum and maximum purchase amounts that you specify.
          </p>
        </div>
      </div>
      <hr />
      <div
        class="components-card__body components-card-body wcpay-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="fraud-protection-rule-toggle"
        >
          <strong>
            Enable filtering
          </strong>
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper ej5x27r4"
          >
            <div
              class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
            >
              <span
                class="components-form-toggle"
              >
                <input
                  aria-describedby="inspector-toggle-control-3__help"
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-3"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-3"
              >
                Block transactions for abnormal purchase prices
              </label>
            </div>
            <p
              class="components-base-control__help css-v0euhr-StyledHelp-deprecatedMarginHelp ej5x27r1"
              id="inspector-toggle-control-3__help"
            >
              When enabled, the payment will be blocked.
            </p>
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            An unusually high purchase amount, compared to the average for your business, can indicate potential fraudulent activity.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
